# my-right-hand

./: .gitignore  README.md  pyproject.toml
cli/: app.py
cli/utils/: __init__.py  export_csv.py  export_data.py  parse_arguments.py  redactor.py  save_csv.py  storage.py
my_right_hand/agent/: __init__.py  base.py  openai.py
my_right_hand/email_client/: __init__.py  base.py  gmail.py
my_right_hand/models/: __init__.py  emails.py  enums.py  tasks.py
my_right_hand/scripts/: cli.py  reviewer.py
my_right_hand/scripts/utils/: __init__.py  generate_dataframe.py  parse_arguments.py  save_csv.py  storage.py
my_right_hand/utils/: __init__.py
scripts/: email_client.py
tests/: test_reviewer.py
