[tool.poetry]
name = "my-right-hand"
version = "0.1.0"
description = ""
authors = ["Bejan Sadeghian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.3"
openai = "^1.6.1"
icecream = "^2.1.3"
google-api-python-client = "^2.111.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
